--- a/main.html
+++ b/main.html
@@ -14,9 +14,7 @@
 		padding:50px;
 		margin:20px;
 		">
-		<p>
-			This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
-		</p>
+		<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
 		</div>
     <script type="text/javascript" src="./script.js">
 </script>
